Creacion del swagger 3.0 y validacion con openAPI
